--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Albert Mkoyan">
     <meta name="description" content="Тестовая страница">
     <meta name="keywords" content="тест,проверка,html">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   <title>Music</title>
 </head>
   <body>
