--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
   <title>Music</title>
 </head>
-  <body>
-    <div class=""
-  <h1><big class="class3">Xcho</big></h1>
+<body>
   <style>
       body{
 
@@ -18,23 +16,11 @@
       }
 
   </style>
-  <img src="A.jpeg" width="20%" height="20%" />
-  <p class="shadow">Xcho</p>
-  <p><audio
-  src="xcho.mp3" controls>
-  </audio></p>
-  <p class="class2">Tolko ti i ya</p>
-  <audio
-  src="xchoti.mp3" controls>
-  </audio>
-  <p class="class4">Xcho2</p>
-<p><audio
-src="xcho1.mp3" controls>
-</audio></p>
-<p>Xcho3</p>
-<p><audio
-src="xcho2.mp3" controls>
-</audio></p>
+  <img src="A.jpeg" width="20%" height="20%">
+  <div>
+    <h2>Xcho111<h2>
+  </div>
+
 
 
   </body>
