--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html  lang="ru">
   <head>
     <meta name="utf-8">
     <meta name="author" content="Albert Mkoyan">
@@ -16,12 +16,25 @@
       }
 
   </style>
-  <img src="A.jpeg" width="20%" height="20%">
-  <div>
-    <h2>Xcho111<h2>
-  </div>
+  <h1><div>
+    <h2>Xcho<h2>
+  </div></h1>
+  <img src="A.jpeg" width="30%" height="40%" left>
+  <b class="class">Только ты и я</b>
   <p><audio
-  src="xcho.mp3" controls>
+  src="xchoti.mp3" controls>
+  </audio></p>
+  <b class="class">I can fly</b>
+  <p><audio
+  src="xcho2.mp3" controls>
+  </audio></p>
+  <b class="class">А мое солнце светит на небе</b>
+  <p><audio
+  src="Xcho.mp3" controls>
+  </audio></p>
+  <b class="class">Забирай мою печаль</b>
+  <p><audio
+  src="Xcho1.mp3" controls>
   </audio></p>
 
 
