--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <h1><div>
     <h2>Xcho<h2>
   </div></h1>
+  <p><button>Instasamka</button><p>
+  <p><button>Miyagi</button><p>
+    <p><button>Aram Asatryan</button><p>
   <img src="A.jpeg" width="30%" height="40%" left>
   <b class="class">Только ты и я</b>
   <p><audio
@@ -30,11 +33,11 @@
   </audio></p>
   <b class="class">А мое солнце светит на небе</b>
   <p><audio
-  src="Xcho.mp3" controls>
+  src="xcho.mp3" controls>
   </audio></p>
   <b class="class">Забирай мою печаль</b>
   <p><audio
-  src="Xcho1.mp3" controls>
+  src="xcho1.mp3" controls>
   </audio></p>
 
 
