--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div></h1>
   <p><button>Instasamka</button><p>
   <p><button>Miyagi</button><p>
-    <p><button>Aram Asatryan</button><p>
+    <p><a href="https://albertmkoyan.github.io/MusicSTUDIO.111github.io/"><button>Aram Asatryan</button></a><p>
   <img src="A.jpeg" width="30%" height="40%" left>
   <b class="class">Только ты и я</b>
   <p><audio
