--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </div></h1>
   <p><button>Instasamka</button><p>
   <p><button>Miyagi</button><p>
+    <p><button>Janaga</button><p>
     <p><a href="https://albertmkoyan.github.io/AlbertMkoyan/"><button>Aram Asatryan</button></a><p>
   <img src="A.jpeg" width="30%" height="40%" left>
   <b class="class">Только ты и я</b>
