--- a/index.html
+++ b/index.html
@@ -12,34 +12,41 @@
   <style>
       body{
 
-        background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20200714/pngtree-modern-double-color-futuristic-neon-background-image_351866.jpg');
+        background-image: url('https://foni.club/uploads/posts/2023-01/1674332285_foni-club-p-fon-anime-gorizontalnii-1.jpg');
       }
+      img {
+        outline: 5px solid white;
+      }
+    </style>
+      <h1><div>
+        <h2>Xcho<h2>
+      </div></h1>
+          <div class="container">
+        <p><a href="https://albertmkoyan.github.io/AlbertMkoyan/"><button class="neon-btn blue">Aram Asatryan</button></a><p>
+          <p><button class="neon-btn purple">Miyagi</button><p>
+            <p><button class="neon-btn green">Janaga</button><p>
+              <p><button class="neon-btn yellow">Instasamka</button><p>
+              </div>
+              <p></p>
+              <img src="A.jpeg" width="30%" height="40%" left>
+          <b class="class">Только ты и я</b>
+          <p><audio
+          src="xchoti.mp3" controls>
+          </audio></p>
+          <b class="class">I can fly</b>
+          <p><audio
+          src="xcho2.mp3" controls>
+          </audio></p>
+          <b class="class">А мое солнце светит на небе</b>
+          <p><audio
+          src="xcho.mp3" controls>
+          </audio></p>
+          <b class="class">Забирай мою печаль</b>
+          <p><audio
+          src="xcho1.mp3" controls>
+          </audio></p>
 
-  </style>
-  <h1><div>
-    <h2>Xcho<h2>
-  </div></h1>
-  <p><button>Instasamka</button><p>
-  <p><button>Miyagi</button><p>
-    <p><button>Janaga</button><p>
-    <p><a href="https://albertmkoyan.github.io/AlbertMkoyan/"><button>Aram Asatryan</button></a><p>
-  <img src="A.jpeg" width="30%" height="40%" left>
-  <b class="class">Только ты и я</b>
-  <p><audio
-  src="xchoti.mp3" controls>
-  </audio></p>
-  <b class="class">I can fly</b>
-  <p><audio
-  src="xcho2.mp3" controls>
-  </audio></p>
-  <b class="class">А мое солнце светит на небе</b>
-  <p><audio
-  src="xcho.mp3" controls>
-  </audio></p>
-  <b class="class">Забирай мою печаль</b>
-  <p><audio
-  src="xcho1.mp3" controls>
-  </audio></p>
+
 
 
 
