--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         background-image: url('https://foni.club/uploads/posts/2023-01/1674332285_foni-club-p-fon-anime-gorizontalnii-1.jpg');
       }
       img {
-        outline: 5px solid white;
+        outline: 5px solid lime;
       }
     </style>
       <h1><div>
