--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p><a href="https://albertmkoyan.github.io/AlbertMkoyan/"><button class="neon-btn blue">Aram Asatryan</button></a><p>
           <p><button class="neon-btn purple">Miyagi</button><p>
             <p><button class="neon-btn green">Janaga</button><p>
-              <p><button class="neon-btn yellow">Instasamka</button><p>
+              <p><a href="https://albertmkoyan.github.io/Abo/"><button class="neon-btn yellow">Instasamka</button></a><p>
               </div>
               <p></p>
               <img src="A.jpeg" width="30%" height="40%" left>
