--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html  lang="ru">
   <head>
+    <link rel="Website icon" type="png"
+    href="music.jpg">
     <meta name="utf-8">
     <meta name="author" content="Albert Mkoyan">
     <meta name="description" content="Тестовая страница">
@@ -17,13 +19,14 @@
       img {
         outline: 5px solid lime;
       }
+
     </style>
       <h1><div>
         <h2>Xcho<h2>
       </div></h1>
           <div class="container">
         <p><a href="https://albertmkoyan.github.io/AlbertMkoyan/"><button class="neon-btn blue">Aram Asatryan</button></a><p>
-          <p><button class="neon-btn purple">Miyagi</button><p>
+          <p><a href="https://albertmkoyan.github.io/Music/"><button class="neon-btn purple">Miyagi</button><p>
             <p><button class="neon-btn green">Janaga</button><p>
               <p><a href="https://albertmkoyan.github.io/Abo/"><button class="neon-btn yellow">Instasamka</button></a><p>
               </div>
@@ -44,9 +47,7 @@
           <b class="class">Забирай мою печаль</b>
           <p><audio
           src="xcho1.mp3" controls>
-          </audio></p>
-
-
+        </audio></p>
 
 
 
