--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="container">
         <p><a href="https://albertmkoyan.github.io/AlbertMkoyan/"><button class="neon-btn blue">Aram Asatryan</button></a><p>
           <p><a href="https://albertmkoyan.github.io/Music/"><button class="neon-btn purple">Miyagi</button><p>
-            <p><button class="neon-btn green">Janaga</button><p>
+            <p><a href="https://albertmkoyan.github.io/Phonk/"><button class="neon-btn green">Phonk</button><p>
               <p><a href="https://albertmkoyan.github.io/Abo/"><button class="neon-btn yellow">Instasamka</button></a><p>
               </div>
               <p></p>
